syntax = "proto3";

package opentelemetry.proto.trace.v1;

// TracesData represents the traces data that can be stored in a persistent storage,
// OR can be embedded by other protocols that transfer OTLP traces data but do not
// implement the OTLP protocol.
message TracesData {
  // An array of ResourceSpans.
  repeated ResourceSpans resource_spans = 1;
}

// A collection of ScopeSpans from a Resource.
message ResourceSpans {
  // The resource for the spans in this message.
  Resource resource = 1;

  // A list of ScopeSpans that originate from a resource.
  repeated ScopeSpans scope_spans = 2;

  // The Schema URL, if known.
  string schema_url = 3;
}

// A collection of Spans produced by an InstrumentationScope.
message ScopeSpans {
  // The instrumentation scope information for the spans in this message.
  InstrumentationScope scope = 1;

  // A list of Spans that originate from an instrumentation scope.
  repeated Span spans = 2;

  // The Schema URL, if known.
  string schema_url = 3;
}

// Resource information.
message Resource {
  // Set of attributes that describe the resource.
  repeated KeyValue attributes = 1;

  // dropped_attributes_count is the number of dropped attributes.
  uint32 dropped_attributes_count = 2;
}

// InstrumentationScope is a message representing the instrumentation scope information.
message InstrumentationScope {
  // An empty instrumentation scope name means the name is unknown.
  string name = 1;
  string version = 2;
  repeated KeyValue attributes = 3;
  uint32 dropped_attributes_count = 4;
}

// A Span represents a single operation within a trace.
message Span {
  // A unique identifier for a trace.
  bytes trace_id = 1;

  // A unique identifier for a span within a trace.
  bytes span_id = 2;

  // trace_state conveys information about request position in multiple distributed tracing graphs.
  string trace_state = 3;

  // The span_id of this span's parent span.
  bytes parent_span_id = 4;

  // A description of the span's operation.
  string name = 5;

  // Distinguishes between spans generated in a particular context.
  enum SpanKind {
    SPAN_KIND_UNSPECIFIED = 0;
    SPAN_KIND_INTERNAL = 1;
    SPAN_KIND_SERVER = 2;
    SPAN_KIND_CLIENT = 3;
    SPAN_KIND_PRODUCER = 4;
    SPAN_KIND_CONSUMER = 5;
  }

  SpanKind kind = 6;

  // start_time_unix_nano is the start time of the span.
  fixed64 start_time_unix_nano = 7;

  // end_time_unix_nano is the end time of the span.
  fixed64 end_time_unix_nano = 8;

  // attributes is a collection of key/value pairs.
  repeated KeyValue attributes = 9;

  // dropped_attributes_count is the number of attributes that were discarded.
  uint32 dropped_attributes_count = 10;

  // events is a collection of Event items.
  repeated Event events = 11;

  // dropped_events_count is the number of dropped events.
  uint32 dropped_events_count = 12;

  // links is a collection of Links.
  repeated Link links = 13;

  // dropped_links_count is the number of dropped links.
  uint32 dropped_links_count = 14;

  // Status of the span.
  Status status = 15;
}

// Event is a time-stamped annotation of the span.
message Event {
  // time_unix_nano is the time the event occurred.
  fixed64 time_unix_nano = 1;

  // name of the event.
  string name = 2;

  // attributes is a collection of attribute key/value pairs on the event.
  repeated KeyValue attributes = 3;

  // dropped_attributes_count is the number of dropped attributes.
  uint32 dropped_attributes_count = 4;
}

// Link is a pointer from the current span to another span.
message Link {
  // A unique identifier of a trace that this linked span is part of.
  bytes trace_id = 1;

  // A unique identifier for the linked span.
  bytes span_id = 2;

  // The trace_state associated with the link.
  string trace_state = 3;

  // attributes is a collection of attribute key/value pairs on the link.
  repeated KeyValue attributes = 4;

  // dropped_attributes_count is the number of dropped attributes.
  uint32 dropped_attributes_count = 5;
}

// The Status type defines a logical error model.
message Status {
  // The status code.
  enum StatusCode {
    STATUS_CODE_UNSPECIFIED = 0;
    STATUS_CODE_OK = 1;
    STATUS_CODE_ERROR = 2;
  }

  // The status code.
  StatusCode code = 1;

  // A developer-facing human readable error message.
  string message = 2;
}

// KeyValue is a key-value pair that is used to store Span attributes, Link attributes, etc.
message KeyValue {
  string key = 1;
  AnyValue value = 2;
}

// AnyValue is used to represent any type of attribute value.
message AnyValue {
  oneof value {
    string string_value = 1;
    bool bool_value = 2;
    int64 int_value = 3;
    double double_value = 4;
    ArrayValue array_value = 5;
    KeyValueList kvlist_value = 6;
    bytes bytes_value = 7;
  }
}

// ArrayValue is a list of AnyValue messages.
message ArrayValue {
  repeated AnyValue values = 1;
}

// KeyValueList is a list of KeyValue messages.
message KeyValueList {
  repeated KeyValue values = 1;
}
